# saldo

./: .gitignore  .pre-commit-config.yaml  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug-template.yaml
.github/workflows/: publish.yml  release.yml  test.yml
docs/: README.md  jsconfig.json  mdx-components.js  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  proxy.ts  suppress-hmr-errors.cjs
docs/app/: layout.jsx  page.jsx
docs/components/: BracketTable.jsx  FilterControls.jsx  RunCode.jsx  TaxBracketsViewer.jsx  dataTransformation.js  utils.js
docs/content/: _meta.js  api-reference.mdx  examples.mdx  get-started.mdx  index.mdx  mermaid.mdx
docs/lib/: i18n.js
saldo/: schemas.py  simulator.py  text.py  validators.py
saldo/config/: __init__.py  consts.py  schemas.py
saldo/tables/: tax_retention.py
scripts/: convert-2025-raw-data.ts  convert-split-tables.ts  generate-build-info.ts  release.sh  split-raw-data.ts  table-scraper.py  update-manifest-2025.ts
scripts/comparison/: README.md  index.ts  types.ts
scripts/dependent-worker/: README.md  api-client.ts  comparator.ts  index.ts  types.ts
scripts/green-receipts/: process-receipts.ts
scripts/independent-worker/: cli.ts  comparator.ts  index.ts  types.ts
scripts/retention_tables_scraper/: __main__.py  config.py  scraper.py
src/: cli.ts  index.ts
src/config/: consts.ts  schemas.test.ts  schemas.ts
tests/: conftest.py  test_lunch_allowance.py  test_married_person_simulator.py  test_single_person_simulator.py
(+452 files in other folders)
